cloudformation/nextgen-simtool-ui-ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 Instance for Simtool UI
Parameters:
  VpcId:
    Description: "vpcid to be deployed to"
    Type: String
  ImageId:
    Description: "ImageId to be deployed to"
    Type: String

Resources:
  UIEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0dacb0c129b49f529
      KeyName: codeathon
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref WebServerSecurityGroup
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 8
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo yum update -y
          sudo yum install -y git
          git checkout https://github.com/okuswaha/nextgen-simtool-ui.git
          sudo yum install -y docker
          sudo service docker start
          docker run -v /home/ec2-user/nextgen-simtool-ui/nextgen-simtool-ui:/app -v /app/node_modules -p 4200:4200 --rm okuswaha/nextgen-simtool-ui:1.0

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Enable HTTP access via user defined port
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Outputs:
  InstanceId:
    Type: String
    Value: !Ref UIEC2Instance
  AZ:
    Value: !GetAtt [ UIEC2Instance, AvailabilityZone]
  val2:
    Value: !GetAtt [ UIEC2Instance, PublicDnsName]
  val3:
    Value: !GetAtt [ UIEC2Instance, PublicIp]
